# Magic-Mirror

./: .clang-format  CMakeLists.txt  Magic-Mirror.cpp  README.md
